# nsl-itasha-generator

./: README.md  main.py  pyproject.toml
scripts/: build_gepa_dataset.py  extract_reference_crops.py
src/: main.py
src/prompt_optim/: README.md  __init__.py  dspy_config.py  eval_rules.py  gepa_runner.py  image_evaluator.py  prompt_composer.py
src/services/: generation.py  vision.py
src/utils/: image_ops.py
