[project]
name = "nsl-itasha-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.0.4",
    "google-cloud-aiplatform>=1.128.0",
    "google-genai>=1.52.0",
    "httpx[socks]>=0.28.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
]
